added new default template made by seron, polishing soon

--- a/templates/clansphere/admin.htm
+++ b/templates/clansphere/admin.htm
@@ -4,14 +4,14 @@
   <title>{func:title}</title>
   <meta http-equiv="Content-Type" content="text/html; charset={func:charset}" />
   {clansphere:navmeta}
-  <link href="admin.css" rel="stylesheet" type="text/css" />
-  <link href="content.css" rel="stylesheet" type="text/css" />
+  <link href="stylesheets/admin/admin.css" rel="stylesheet" type="text/css" />
+  <link href="stylesheets/admin/content.css" rel="stylesheet" type="text/css" />
   <link rel="alternate" type="application/rss+xml" href="{func:path}uploads/rss/news.xml" />
 </head>
 <body>
 
 <div id="head">
-  <span>CLAN</span>SPHERE ADMINISTRATION
+  <span>ADMININTERFACE</span>
  </div>
 
 <div id="nav-left">
