--- a/templates/clansphere/debug.htm
+++ b/templates/clansphere/debug.htm
@@ -5,8 +5,8 @@
   <title>{func:title}</title>
   <meta http-equiv="Content-Type" content="application/xhtml+xml; charset={func:charset}" />
   {clansphere:navmeta}
-  <link href="template.css" rel="stylesheet" type="text/css" />
-  <link href="content.css" rel="stylesheet" type="text/css" />
+  <link href="stylesheets/admin/template.css" rel="stylesheet" type="text/css" />
+  <link href="stylesheets/admin/content.css" rel="stylesheet" type="text/css" />
   <link rel="alternate" type="application/rss+xml" href="{func:path}uploads/rss/news.xml" id="rss_news" />
 </head>
 <body>
