--- a/templates/clansphere/login.htm
+++ b/templates/clansphere/login.htm
@@ -4,15 +4,14 @@
   <title>{func:title}</title>
   <meta http-equiv="Content-Type" content="text/html; charset={func:charset}" />
   {clansphere:navmeta}
-  <link href="template.css" rel="stylesheet" type="text/css" />
-  <link href="content.css" rel="stylesheet" type="text/css" />
+  <link href="stylesheets/admin/template.css" rel="stylesheet" type="text/css" />
+  <link href="stylesheets/admin/content.css" rel="stylesheet" type="text/css" />
   <link rel="alternate" type="application/rss+xml" href="{func:path}uploads/rss/news.xml" />
 </head>
 <body>
 
 <div id="head">
-  MAINTENANCE
-  <div>This page is down for maintenance</div>
+  <span>CUP</span>LIST<span class="small">BETA</span>
  </div>
 
 <div style="width: 100%" id="content">{func:show}</div>
