updated seron template + theme set - thanks to equal

--- a/templates/clansphere/features.htm
+++ b/templates/clansphere/features.htm
@@ -3,8 +3,8 @@
 <head>
   <title>{func:title}</title>
   <meta http-equiv="Content-Type" content="text/html; charset={func:charset}" />
-  <link href="admin/template.css" rel="stylesheet" type="text/css" />
-  <link href="admin/content.css" rel="stylesheet" type="text/css" />
+  <link href="stylesheets/admin/template.css" rel="stylesheet" type="text/css" />
+  <link href="stylesheets/admin/content.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 
