--- a/templates/clansphere/login.htm
+++ b/templates/clansphere/login.htm
@@ -11,7 +11,7 @@
 <body>
 
 <div id="head">
-  <span>CUP</span>LIST<span class="small">BETA</span>
+  <span>MAINTENANCE</span>
  </div>
 
 <div style="width: 100%" id="content">{func:show}</div>
