added missing list tags - patch 1 altered

--- a/templates/clansphere/index.htm
+++ b/templates/clansphere/index.htm
@@ -35,12 +35,12 @@
 				<div id="infobox" class="clear">
 					<div>
 						<h2>Latest News</h2>
-						{news:navlist}
+						<ul>{news:navlist}</ul>
 					</div><!--END content latest news-->
 					
 					<div>
 						<h2>Latest Topics</h2>
-						{board:navlist}
+						<ul>{board:navlist}</ul>
 					</div><!--END content latest arcticles-->
 					
 					<div>
